syntax = "proto3";

//option java_outer_classname = "SomeParameterProto";

package multiple.my.someparameters;
option java_multiple_files = true;

message SomeParameter {
    string id = 1;
}
